--- a/vpn/example.conf
+++ b/vpn/example.conf
@@ -1,23 +1,40 @@
+# Use Talk2m first East US server (/!\ TCP uses port 443)
+remote device.vpnsa-east-us-1.talk2m.com 443
+
+# I am a client, not a server
 client
+
+# Use the TAP interface (OSI layer 2)
 dev tap
-proto udp
-remote device.vpn36.talk2m.com 1194
+
+# Use TCP as protocol
+proto tcp
+
+# Keep trying indefinitely to resolve the host name of the OpenVPN server
+resolv-retry infinite
+
+# Don't need to bind to a specific local port number
+nobind
+
+# Try to preserve some state across restarts.
 persist-key
 persist-tun
 
+# Silence duplicate packet warnings
+mute-replay-warnings
 
+# Cryptographic cipher (known as ncp-cipher in openvpn 2.4)
+data-ciphers AES-256-GCM
 
-remote-cert-tls server
-key-direction 1
-auth SHA1
+# Set log file verbosity.
+verb 3
+
+# Exit on TLS negociation failure
+tls-exit
 
 script-security 2
 up ./up.sh
-
-comp-lzo
-tls-version-min 1.2 
-tls-cipher TLSv1.2:!AES128:!ARIA128:!CAMELLIA128:!MD5:!eNULL:!PSK3 
-data-ciphers AES-256-GCM:AES-256-CBC:BF-CBC
+down ./down.sh
 
 
 <key>
